Menu fixed, Scrollbar changed, Css changed (MarineLife)

--- a/MarineLife/marine.css
+++ b/MarineLife/marine.css
@@ -18,7 +18,7 @@
 	 /*font-size: 1em;*/
 	 color: #333;
 }
- h1 {
+ .header {
 	 text-align: center;
 	 font-weight: 300;
 	 font-size: 2em;
